--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "typing-games",
+  "name": "typing-game",
   "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
+  "description": "## 概要",
+  "main": "typing.js",
   "scripts": {
     "fix": "prettier --write . && eslint --fix .",
     "lint": "prettier --check . && eslint . && eslint src"
@@ -15,10 +15,24 @@
     "prettier": "^3.1.0"
   },
   "type": "module",
-  "author": "",
-  "license": "ISC",
+  "author": "ryo-ta090972",
+  "license": "MIT",
   "dependencies": {
     "enquirer": "^2.4.1",
     "play-sound": "^1.1.6"
+  },
+  "keywords": [
+    "typing"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ryo-ta090972/typing-game.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Ryo-ta090972/typing-game/issues"
+  },
+  "homepage": "https://github.com/Ryo-ta090972/typing-game#readme",
+  "bin": {
+    "typing-game": "typing.js"
   }
 }
